--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,7 +1,7 @@
 /* index.scss - SCSS version for global styles */
 
 body {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: 'Roboto';
   background: #f5f5f5;
   color: #222;
   margin: 0;
