adding new tweaks to the application

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,7 @@
+.dark, .dark body, .dark .app-container {
+  background: #181a20 !important;
+  color: #e5e7eb !important;
+}
 /* App.scss - SCSS version for app-wide styles */
 
 .app-container {
