--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,15 @@ body {
   color: #222;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+
+  html,
+  body,
+  #root {
+    width: 100%;
+    min-width: 0;
+    box-sizing: border-box;
+  }
 }
 
 /* Utility & global helper classes */
